set tmux escape-time

--- a/users/michaelr/tmux.conf
+++ b/users/michaelr/tmux.conf
@@ -5,6 +5,8 @@ set -g mouse on
 set -g base-index 1
 set -g renumber-windows on
 set -g mode-keys "vi"
+# https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed
+set -sg escape-time 10 
 
 # unbind all keys
 unbind-key -a
