--- a/users/michaelr/tmux.conf
+++ b/users/michaelr/tmux.conf
@@ -8,6 +8,14 @@ set -g mode-keys "vi"
 # https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed
 set -sg escape-time 10 
 
+# setting suggested by tpipeline
+# https://github.com/vimpostor/vim-tpipeline
+set -g focus-events on
+set -g status-style bg=default
+set -g status-left-length 90
+set -g status-right-length 90
+set -g status-justify centre
+
 # unbind all keys
 unbind-key -a
 
